# a11yguard-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/easy/task_01/: code.html  ground_truth.json
data/easy/task_02/: code.html  ground_truth.json
data/easy/task_03/: code.html  ground_truth.json
data/easy/task_04/: code.html  ground_truth.json
data/easy/task_05/: code.html  ground_truth.json
data/easy/task_06/: code.html  ground_truth.json
data/easy/task_07/: code.html  ground_truth.json
data/easy/task_08/: code.html  ground_truth.json
data/easy/task_09/: code.html  ground_truth.json
data/easy/task_10/: code.html  ground_truth.json
data/easy/task_11/: code.html  ground_truth.json
data/easy/task_12/: code.html  ground_truth.json
data/hard/task_01/: code.html  ground_truth.json
data/hard/task_02/: code.html  ground_truth.json
data/hard/task_03/: code.html  ground_truth.json
data/hard/task_04/: code.html  ground_truth.json
data/hard/task_05/: code.html  ground_truth.json
data/hard/task_06/: code.html  ground_truth.json
data/hard/task_07/: code.html  ground_truth.json
data/hard/task_08/: code.html  ground_truth.json
data/hard/task_09/: code.html  ground_truth.json
data/hard/task_10/: code.html  ground_truth.json
data/hard/task_11/: code.html  ground_truth.json
data/hard/task_12/: code.html  ground_truth.json
data/medium/task_01/: code.html  ground_truth.json
env/: __init__.py  accessibility_env.py  grader.py  models.py  tasks.py
server/: app.py  main.py
(+22 files in other folders)
