[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "a11yguard"
version = "1.0.0"
description = "A11yGuard: Web Accessibility Audit Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "dwivediishivam" }
]
keywords = ["openenv", "accessibility", "wcag", "rl", "environment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "huggingface_hub>=0.20.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/dwivediishivam/a11yguard"
"Repository" = "https://github.com/dwivediishivam/a11yguard-openenv"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
